2012-05-21  Raphael Kubo da Costa  <rakuco@webkit.org>

        [EFL] Do not enable Web Audio support by default at build time.
        https://bugs.webkit.org/show_bug.cgi?id=86982

        Reviewed by Philippe Normand.

        Follow-up to r115800. Even though Web Audio support is disabled by
        default in build-webkit, enabling it in OptionsEfl.cmake will turn
        it on when building the port without build-webkit.

        Since Web Audio support for the EFL port does not seem to be fully
        working yet, it is better to disable it in all cases.

        * Source/cmake/OptionsEfl.cmake: Remove option override for
        ENABLE_WEB_AUDIO.

2012-05-21  Dominic Mazzoni  <dmazzoni@google.com>

        AX: A disabled select element should not be exposed as focusable
        https://bugs.webkit.org/show_bug.cgi?id=86949

        Reviewed by Chris Fleizach.

        * LayoutTests/accessibility/disabled-controls-not-focusable-expected.txt: Added.
        * LayoutTests/accessibility/disabled-controls-not-focusable.html: Added.
        * Source/WebCore/accessibility/AccessibilityListBox.h:
        (AccessibilityListBox):
        * Source/WebCore/accessibility/AccessibilityMenuList.cpp:
        (WebCore::AccessibilityMenuList::canSetFocusAttribute):
        (WebCore):
        * Source/WebCore/accessibility/AccessibilityMenuList.h:
        (AccessibilityMenuList):

2012-05-20  George Staikos  <staikos@webkit.org>

        [BlackBerry] Define navigator.vendor for BlackBerry.
        https://bugs.webkit.org/show_bug.cgi?id=86975

        Reviewed by Antonio Gomes.

        * Source/cmake/OptionsBlackBerry.cmake:

2012-05-20  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fix. Clean up no longer used files in DerivedSources.

        * wscript:

2012-05-19  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fix. Remove a couple files wx doesn't use from the build.

        * wscript:
