@@ -82,6 +82,13 @@ WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_VIDEO ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_VIDEO_TRACK ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_WEB_TIMING ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_WORKERS ON)
+
+# FIXME: Perhaps we need a more generic way of defining dependencies between features.
+# VIDEO_TRACK depends on VIDEO.
+IF (NOT ENABLE_VIDEO AND ENABLE_VIDEO_TRACK)
+    MESSAGE(STATUS "Disabling VIDEO_TRACK since VIDEO support is disabled.")
+    SET(ENABLE_VIDEO_TRACK OFF)
+ENDIF ()
 WEBKIT_OPTION_END()
 
 OPTION(ENABLE_ECORE_X "Enable Ecore_X specific usage (cursor, bell)" ON)
