@@ -1,5 +1,13 @@
 2012-05-21  Raphael Kubo da Costa  <rakuco@webkit.org>
 
+        [EFL] Unreviewed build fix when ENABLE_VIDEO is off and ENABLE_VIDEO_TRACK is not.
+
+        Do not enable VIDEO_TRACK if VIDEO itself has been disabled.
+
+        * Source/cmake/OptionsEfl.cmake:
+
+2012-05-21  Raphael Kubo da Costa  <rakuco@webkit.org>
+
         [EFL] Do not enable Web Audio support by default at build time.
         https://bugs.webkit.org/show_bug.cgi?id=86982
 
